# SmartInboxEnv

./: Dockerfile  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
env/: core.py
graders/: grader.py
models/: schema.py
server/: app.py
tasks/: tasks.py
